# EPOCH

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml  test.ipynb
data_service/: .gitattributes  .gitignore  README.md  README_DATABASE.md  conftest.py  docker-compose.yml  dockerfile  dump_database.sh  elementaldb_client_info.sql  elementaldb_tables.sql  example_upload_interface.html  example_view_interface.html  packages.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.in  requirements.txt
data_service/app/: database.py  dependencies.py  epl_secrets.py  job_queue.py  lifespan.py  log.py  main.py
data_service/app/internal/: epl_typing.py  pvgis.py  task_data_wrapper.py  visualise.py
data_service/app/models/: __init__.py  air_source_heat_pump.py  carbon_intensity.py  client_data.py  core.py  cost_model.py  electricity_load.py  energy_performance_certificate.py  heating_load.py  import_tariffs.py  meter_data.py  optimisation.py  renewables.py  site_manager.py  site_range.py  thermal_model.py  weather.py
data_service/app/routers/: air_source_heat_pump.py  carbon_intensity.py  client_data.py  cost_model.py  electricity_load.py  energy_performance_certificate.py  generate_all.py  heating_load.py  import_tariffs.py  meter_data.py  models.py  (+6 more)
data_service/migrations/: 000001_initial_schemas.up.sql  000002_change_objectives.down.sql  000002_change_objectives.up.sql  000003_portfolio_database.down.sql  000003_portfolio_database.up.sql  000004_change_tariff_timestamps.down.sql  000004_change_tariff_timestamps.up.sql  000005_change_solarPV_timestamps.down.sql  000005_change_solarPV_timestamps.up.sql  000006_add_thermal_model_table.down.sql  000006_add_thermal_model_table.up.sql  000006_add_total_metrics.down.sql  000006_add_total_metrics.up.sql  000006_epc_columns.down.sql  000006_epc_columns.up.sql  000007_add_thermal_model_table.down.sql  000008_add_optimisers.down.sql  000008_add_optimisers.up.sql  000008_data_bundles.down.sql  000008_data_bundles.up.sql  000009_add_cost_and_baseline_metrics.down.sql  000009_add_cost_and_baseline_metrics.up.sql  000009_store_baselines.down.sql  000009_store_baselines.up.sql  000010_epc_columns.down.sql  000010_epc_columns.up.sql  000011_store_baselines.down.sql  000011_store_baselines.up.sql  000012_add_npv_balance.down.sql  000012_add_npv_balance.up.sql  000013_solar_locations.down.sql  000013_solar_locations.up.sql  000013_wind_generation.down.sql  000013_wind_generation.up.sql  000014_remove_baseline_id.down.sql  000014_remove_baseline_id.up.sql  000014_wind_generation.down.sql  000014_wind_generation.up.sql  000015_peak_hload.down.sql  000015_peak_hload.up.sql  (+51 more)
data_service/tests/: test_bait.py  test_building_fabric.py  test_conversions.py  test_dhw.py  test_elec_synth.py  test_endpoints.py  test_epcs.py  test_gas_meters.py  test_import_tariff_internal.py  test_phpp.py  test_task_data.py  test_thermal_model.py  test_utils.py  test_vae.py
epoch_simulator/: .dockerignore  Assets.h  CMakeLists.txt  CMakePresets.json  CSVHload.csv  Costs.h  Definitions.h  EP_BE_out_parallel.csv  EP_BE_out_parallel_old.csv  EP_FE_full.cpp  EP_FE_full.rc  EP_FE_full.sln  EP_FE_full.vcxproj  EP_FE_full.vcxproj.filters  EP_main.cpp  Eload.h  FileIO.h  Header_old.h  Hload.h  README.md  RGen.h  Resource.h  Threadsafe.h  Timeseries.h  outputparameters.json  outputparameters_init.json  parameters.json  setup_vcpkg.bat  vcpkg.json
epoch_simulator/EP/: CMakeLists.txt  Definitions.h  EP.vcxproj  EP.vcxproj.filters  Eigen.natvis  Exceptions.hpp
epoch_simulator/EP_Test/: CMakeLists.txt  EP_Test.vcxproj  test.cpp
epoch_simulator/EP_main/: CMakeLists.txt  EP_main.cpp  EP_main.h  EP_main.vcxproj  EP_main.vcxproj.filters
epoch_simulator/EP_py/: Bindings.cpp  Bindings.hpp  CMakeLists.txt  Simulate_py.cpp  Simulate_py.hpp
epoch_simulator/GUI/: gui.hpp
epoch_simulator/InputData/: CSVDHWdemand.csv  CSVEload.csv  CSVImporttariff.csv  CSVRGen.csv  epochConfig.json  inputParameters.json  siteData.json  taskData.json
epoch_simulator/Optimisation/: Optimiser.cpp  Optimiser.hpp
epoch_simulator/Simulation/: Config.h  Simulate.cpp  Simulate.hpp
epoch_simulator/docker/: Dockerfile  docker-compose.yml
epoch_simulator/epoch_lib/: CMakeLists.txt  Definitions.h  Definitions.hpp  Exceptions.hpp
epoch_simulator/epoch_main/: ArgHandling.hpp  CMakeLists.txt  Resource.h  epoch_main.cpp  epoch_main.hpp  epoch_main.rc
epoch_simulator/epoch_py/: Bindings.cpp  Bindings.hpp  CMakeLists.txt  README.md  Simulate_py.cpp  Simulate_py.hpp  bindings_generator_utility.py
epoch_simulator/epoch_test/: CMakeLists.txt  README.md  test.cpp  test_costs.cpp  test_fabric_interventions.cpp  test_funding.cpp  test_helpers.hpp  test_pv.cpp  test_python.py  test_scenario_validation.cpp  test_site_data.cpp  test_site_data_json.cpp  test_tariff_stats.cpp  test_task_data.cpp  test_total.cpp
epoch_simulator/external-dependencies/: get-eigen.bat
epoch_simulator/io/: FileHandling.cpp  FileHandling.hpp
optimisation_service/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
optimisation_service/app/: dependencies.py  main.py
optimisation_service/docker/: .dockerignore  Dockerfile  docker-compose.yml
optimisation_service/mount_site_data/: CSVAirtemp.csv  CSVDHWdemand.csv
optimisation_service/requirements/: common.txt  dev.txt
optimisation_service/stubs/: epoch_simulator.pyi
optimisation_service/tests/: conftest.py  test_NSGA2.py  test_app_main.py  test_bayesian.py  test_bayesian_algorithm.py  test_bayesian_common.py  test_bayesian_research.py  test_constraints.py  test_dependencies.py  test_ditributed_portfolio_optimiser.py  test_epoch_utils.py  test_ga_utils.py  test_genetic_algorithm.py  test_grid_search.py  test_heuristics.py  test_metrics.py  test_pareto_front.py  test_population_init.py  test_portfolio_simulator.py  test_problem.py  test_reproduce_result.py  test_research_bayesian.py  test_result.py  test_segfault.py  test_site_data.py  test_site_range.py  test_task_data_wrapper.py  test_upgrade_tree.py
(+1078 files in other folders)
