[project]
name = "epoch"
version = "1.0.0"
description = "Elemental Power Optimiser with Clean Heat"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "aiometer>=1.0.0",
    "anyio>=4.12.1",
    "asyncpg>=0.31.0",
    "bayesian-optimization>=3.2.0",
    "botorch>=0.17.0",
    "fastapi[standard]>=0.129.0",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "paretoset>=1.2.5",
    "pydantic>=2.12.5",
    "pymoo>=0.6.1.6",
    "python-multipart>=0.0.22",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "sklego>=0.0",
    "statsmodels>=0.14.6",
    "torch>=2.10.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "asyncpg-stubs>=0.31.1",
    "datamodel-code-generator>=0.54.0",
    "ipykernel>=7.2.0",
    "joblib-stubs>=1.5.3.1.20260117",
    "mypy>=1.19.1",
    "networkx-stubs>=0.0.1",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.1",
    "scipy-stubs>=1.17.0.2",
    "sqlfluff>=4.0.4",
    "testing-common-database>=2.0.3",
    "testing-postgresql>=1.3.0",
    "types-networkx>=3.6.1.20260210",
    "types-openpyxl>=3.1.5.20250919",
    "types-protobuf>=6.32.1.20251210",
    "types-requests>=2.32.4.20260107",
    "types-tensorflow>=2.18.0.20260121",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[tool.ruff]
exclude = ["*.ipynb", "data_service/app/models/epoch_types/", "optimisation_service/app/models/epoch_types/", "core_simulator/", "epoch_gui/"]
line-length = 128

[tool.ruff.format]
preview = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint]
preview = true
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warning
    "F", # pyflakes
    "B", # flake8-bugbear
    "I", # isort
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "DTZ", #datetime
    "PT", # pytest
    "PD", # pandas
    "PERF", # performance,
    "RUF", # ruff
    "FAST", # fastAPI
    "D", # pydocstyle
    "PLR",
    "NPY",
    "ICN",
    "LOG",
    "FURB",
    "TRY",
    "T", # flake8-print
    "RET", # flake8-return
    "RSE", # flake8-raise 
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "ANN", # flake8-annotations
    "ASYNC", 
    # "DOC", # docstring contents
]
ignore = [
    "PD008", # at instead of loc
    "PT011", # pytest raises too broad
    "RUF029", # declared async but doesn't use
    "TRY003", # Avoid specifying long messages outside the exception class
    "PLR2004", # magic value used in comparison
    "PLR6301", # could be a function, class method, ... (complains about tests)
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PLR0913",  # too many arguments
    "PLR0914", # too many local variables
    "PLR0915", # too many statements
    "PLR0917", # too many positional arguments
    "TRY301", # raise to inner function
    "ANN002",  # Missing type annotation for args
    "ANN003", # Missing type annotation for kwargs
    "ANN401", #  (typing.Any)
    "RUF067", # init module should only contain docstrings
    "RUF069", # floating point equality
]

[tool.ruff.lint.per-file-ignores]
"data_service/app/models/*" = ["D100"]
"optimisation_service/tests/*.py" = ["D", "SIM118", "ARG001", "ASYNC240", "ASYNC251"]
"optimisation_service/*" = ["D100", "D101", "D104", "D105", "ARG001", "ARG002", "NPY002", "SIM102"]
"epoch_demonstrator/*" = ["D100", "D101", "D103", "D104", "D105"]
"epoch_demonstrator/app/models.py" = ["E501"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.pytest.ini_options]
markers = [
    "requires_epoch: Mark tests as requiring Epoch, and disable if we can't find it (deselect with '-m \"not requires_epoch\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "external: marks tests as requiring an external API key (deselect with '-m \"not external\"')",
]
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
check_untyped_defs = true
warn_redundant_casts = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "app.models.epoch_types.task_data_type"
ignore_errors = true

[tool.sqlfluff.core]
dialect = "postgres"
max_line_length = 128
templater = "python"
ignore = "templating"
large_file_skip_byte_limit = 20000 # ignore the big first file


[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.capitalisation.identifiers]
extended_capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.types]
extended_capitalisation_policy = "upper"
