[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Elemental Python"
version = "0.1"
authors = [
  { name="Matt Bailey", email="matthew@elementalpower.co.uk"},
  { name="William Drouard", email="william@elementalpower.co.uk" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.ruff]
exclude = ["*.ipynb", "app/models/epoch_types/"]
line-length = 128

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warning
    "F", # pyflakes
    "B", # flake8-bugbear
    "I", # isort
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "DTZ", #datetime
    "PT", # pytest
    "PD", # pandas
    "PERF", # performance,
    "RUF", # ruff
    "FAST", # fastAPI
    "D", # pydocstyle
    "PLR",
    #"NPY",
    #"ICN",
    #"LOG",
    "FURB",
    "TRY",
    # "DOC", # docstring contents
]
ignore = [
    "PD008", # at instead of loc
    "PD901", # pandas df variable name
    "PT011", # pytest raises too broad
    "RUF029", # declared async but doesn't use
    "TRY003", # Avoid specifying long messages outside the exception class
    "PLR2004", # magic value used in comparison
    "PLR6301", # could be a function, class method, ... (complains about tests)
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PLR0913",  # too many arguments
    "PLR0914", # too many local variables
    "PLR0915", # too many statements
    "PLR0917", # too many positional arguments
    "TRY301", # raise to inner function
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.pytest.ini_options]
markers = [
    "requires_epoch: Mark tests as requiring Epoch, and disable if we can't find it (deselect with '-m \"not requires_epoch\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "external: marks tests as requiring an external API key (deselect with '-m \"not external\"')",
]
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
check_untyped_defs = true
warn_redundant_casts = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "app.models.epoch_types.task_data_type"
ignore_errors = true

[tool.sqlfluff.core]
dialect = "postgres"
max_line_length = 128
templater = "python"
ignore = "templating"
large_file_skip_byte_limit = 20000 # ignore the big first file


[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.capitalisation.identifiers]
extended_capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.types]
extended_capitalisation_policy = "upper"