[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Optimisation Elemental"
version = "0.1"
authors = [
 { name="William Drouard", email="william@elementalpower.co.uk" },
  { name="Matt Bailey", email="matthew@elementalpower.co.uk"},
]
description = "Optimisation Backend for Elemental Power"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.ruff]
exclude = ["*.ipynb", "app/models/epoch_types/", "Epoch/"]
line-length = 128

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warning
    "F", # pyflakes
    "B", # flake8-bugbear
    "I", # isort
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "DTZ", #datetime
    "PT", # pytest
    "PD", # pandas
    "PERF", # performance,
    "RUF", # ruff
    "FAST", # fastAPI
    "D", # pydocstyle
    "PLR",
    #"NPY",
    #"ICN",
    #"LOG",
    "FURB",
    "TRY",
    # "DOC", # docstring contents
]
ignore = [
    "D100", # module docstrings mostly not helpful
    "D104", # package docstrings mostly not helpful
    "PD008", # at instead of loc
    "PD901", # pandas df variable name
    "PT011", # pytest raises too broad
    "RUF029", # declared async but doesn't use
    "TRY003", # Avoid specifying long messages outside the exception class
    "PLR2004", # magic value used in comparison
    "PLR6301", # could be a function, class method, ... (complains about tests)
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PLR0913",  # too many arguments
    "PLR0914", # too many local variables
    "PLR0915", # too many statements
    "PLR0917", # too many positional arguments
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.per-file-ignores]
# Skip all docstring-like complaints in the test directory
"tests/*" = ["D"]
"app/models/*" = ["D101", "D105"]

[tool.pytest.ini_options]
markers = [
    "requires_epoch: Mark tests as requiring Epoch, and disable if we can't find it (deselect with '-m \"not requires_epoch\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "external: marks tests as requiring an external API key (deselect with '-m \"not external\"')",
]
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
exclude = ["Epoch/"]
check_untyped_defs = true
extra_checks = true
disallow_any_generics = true 
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 
disallow_untyped_decorators = true
no_implicit_reexport = true
strict_equality = true 
warn_redundant_casts = true
warn_return_any = true 
warn_unreachable = true
warn_unused_configs = true 
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "app.models.epoch_types.task_data_type"
ignore_errors = true
